sheep-dog-features/kubernetes/shared/base/amq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sheep-dog-amq
  labels:
    app: sheep-dog
    component: sheep-dog-amq
spec:
  selector:
    matchLabels:
      component: sheep-dog-amq
  template:
    metadata:
      labels:
        app: sheep-dog
        component: sheep-dog-amq
    spec:
      containers:
        - name: sheep-dog-amq
          image: apache/activemq-artemis:2.41.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 61616
              name: jms
            - containerPort: 8161
              name: console
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            tcpSocket:
              port: 61616
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 61616
            initialDelaySeconds: 60
            periodSeconds: 10
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/artemis/data
      volumes:
        - name: data-volume
          emptyDir: {}
