sheep-dog-features/kubernetes/shared/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sheep-dog-db
  labels:
    app: sheep-dog
    component: sheep-dog-db
spec:
  selector:
    matchLabels:
      component: sheep-dog-db
  template:
    metadata:
      labels:
        app: sheep-dog
        component: sheep-dog-db
    spec:
      containers:
        - name: sheep-dog-db
          image: ghcr.io/farhan5248/sheep-dog-dev-db:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data-volume
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - "mysql -u root -p$$MYSQL_ROOT_PASSWORD -e 'SELECT 1;'"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: sheep-dog-db-pvc
