sheep-dog-features/kubernetes/shared/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-db
  labels:
    app: sheep-dog
    component: sheep-dog-db
spec:
  selector:
    component: sheep-dog-db
  ports:
    - name: sheep-dog-db
      port: 3306
  type: ClusterIP
